force-app/main/default/objects/Application_form__c/Application_form__c.object-meta.xml
<CustomObject>
    <label>Application (Form)</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Application Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>