force-app/main/default/objects/Application_form__c/fields/AAN_Member__c.field-meta.xml
<CustomField>
    <fullName>AAN_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I am AAN Member</label>
    <type>Checkbox</type>
</CustomField>