force-app/main/default/objects/Application_form__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <formula>Order__r.Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>