force-app/main/default/objects/Application_form__c/fields/Attachment_Link__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/related/AttachedContentDocuments/view&quot;,&quot;Click to view Attachments&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Link</label>
    <type>Text</type>
</CustomField>