force-app/main/default/objects/Application_form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications form</relationshipLabel>
    <relationshipName>Applications_form</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>