force-app/main/default/objects/Application_form__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>If Resident or Research, attach signed letter of supervisor</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>