force-app/main/default/objects/Application_form__c/fields/Education_Degree_Year__c.field-meta.xml
<CustomField>
    <fullName>Education_Degree_Year__c</fullName>
    <label>Education / Degree / Year</label>
    <type>TextArea</type>
</CustomField>