force-app/main/default/objects/Application_form__c/fields/Expected_Date_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Graduation__c</fullName>
    <inlineHelpText>Please indicate the actual or expected date of graduation for your most recent degree.</inlineHelpText>
    <label>Date of Graduation</label>
    <type>Date</type>
</CustomField>