force-app/main/default/objects/Application_form__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>