force-app/main/default/objects/Application_form__c/fields/Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Status__c</fullName>
    <label>Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Further Information Required</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
                <isActive>false</isActive>
                <label>In Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>