force-app/main/default/objects/Application_form__c/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <label>Last name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>