force-app/main/default/objects/Application_form__c/fields/License_issued__c.field-meta.xml
<CustomField>
    <fullName>License_issued__c</fullName>
    <inlineHelpText>Please indicate the actual or expected date of issue of the license to practice medicine.</inlineHelpText>
    <label>License issued</label>
    <type>Date</type>
</CustomField>