force-app/main/default/objects/Application_form__c/fields/Member_of_Society__c.field-meta.xml
<CustomField>
    <fullName>Member_of_Society__c</fullName>
    <label>Member of Society</label>
    <length>255</length>
    <type>Text</type>
</CustomField>