force-app/main/default/objects/Application_form__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipName>Applications_form</relationshipName>
    <type>Lookup</type>
</CustomField>