force-app/main/default/objects/Application_form__c/fields/Membership_in_other_societies__c.field-meta.xml
<CustomField>
    <fullName>Membership_in_other_societies__c</fullName>
    <label>Membership in other societies</label>
    <type>TextArea</type>
</CustomField>