force-app/main/default/objects/Application_form__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment &amp; Invoice</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Applications Forms</relationshipLabel>
    <relationshipName>Applications_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>