force-app/main/default/objects/Application_form__c/fields/Other_Place_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Other_Place_of_Work__c</fullName>
    <description>This field is completed, if the department cannot be found.</description>
    <inlineHelpText>If you cannot find your department above, please enter your hospital and department, including address, in english below.</inlineHelpText>
    <label>Other Place of Work</label>
    <type>TextArea</type>
</CustomField>