force-app/main/default/objects/Application_form__c/fields/Other_relevant_information__c.field-meta.xml
<CustomField>
    <fullName>Other_relevant_information__c</fullName>
    <label>Other relevant information</label>
    <type>TextArea</type>
</CustomField>