force-app/main/default/objects/Application_form__c/fields/Payment_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically set when EAN staff uses Payment Reminder action.
When this field is true, an email alert is triggered and sent to the applicant.</description>
    <inlineHelpText>When this field is true, an email alert is triggered and sent to the applicant.</inlineHelpText>
    <label>Payment Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>