force-app/main/default/objects/Application_form__c/fields/Place_of_work__c.field-meta.xml
<CustomField>
    <fullName>Place_of_work__c</fullName>
    <label>Hospital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>