force-app/main/default/objects/Application_form__c/fields/Post_nominal_Title__c.field-meta.xml
<CustomField>
    <fullName>Post_nominal_Title__c</fullName>
    <label>Post-nominal Title(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>