force-app/main/default/objects/Application_form__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <description>If student, attach student ID card</description>
    <label>Profession</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Residents/Physician in training</fullName>
                <label>Resident/physician in training</label>
            </value>
            <value>
                <fullName>Research Fellows in Neurology</fullName>
                <label>Research fellow in neurology</label>
            </value>
            <value>
                <fullName>PhD student in neurology</fullName>
            </value>
            <value>
                <fullName>Undergraduate Medical Student</fullName>
                <label>Undergraduate medical student</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Neurologist working in Pharma</fullName>
                <label>Neurologist working in pharma</label>
            </value>
            <value>
                <fullName>PhD students in neurology</fullName>
                <isActive>false</isActive>
                <label>PhD students in neurology</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <isActive>false</isActive>
                <label>Student</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>