force-app/main/default/objects/Application_form__c/fields/Reasons_for_applying_for_membership__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_applying_for_membership__c</fullName>
    <label>Reasons for applying for membership</label>
    <type>TextArea</type>
</CustomField>