force-app/main/default/objects/Application_form__c/fields/Renewal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_End_Date__c</fullName>
    <label>Renewal End Date</label>
    <type>DateTime</type>
</CustomField>