force-app/main/default/objects/Application_form__c/fields/Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents__c</fullName>
    <formula>Membership__r.Required_Documents__c</formula>
    <label>Required Documents</label>
    <type>Text</type>
</CustomField>