force-app/main/default/objects/Application_form__c/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <label>Country of Residence</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>