force-app/main/default/objects/Application_form__c/fields/Role_in_department__c.field-meta.xml
<CustomField>
    <fullName>Role_in_department__c</fullName>
    <label>Role in Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>