force-app/main/default/objects/Application_form__c/fields/Society__c.field-meta.xml
<CustomField>
    <fullName>Society__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member of EAN Partner Society</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Society__c.Society__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>National Neurological Society</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Society__c</referenceTo>
    <relationshipLabel>Applications form</relationshipLabel>
    <relationshipName>Applications_form</relationshipName>
    <type>Lookup</type>
</CustomField>