force-app/main/default/objects/Application_form__c/fields/Sub_specialty__c.field-meta.xml
<CustomField>
    <fullName>Sub_specialty__c</fullName>
    <description>If student, attach student ID card</description>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ageing and dementia</fullName>
            </value>
            <value>
                <fullName>Autonomic nervous system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>