force-app/main/default/objects/Application_form__c/fields/Title_s__c.field-meta.xml
<CustomField>
    <fullName>Title_s__c</fullName>
    <label>Title(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MD, PhD</fullName>
            </value>
            <value>
                <fullName>MD, Prof</fullName>
            </value>
            <value>
                <fullName>MD, Prof, PhD</fullName>
            </value>
            <value>
                <fullName>MD, Assoc. Prof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>