force-app/main/default/objects/Application_form__c/fields/ZIP_Postal_code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Postal_code__c</fullName>
    <label>ZIP/Postal code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>