force-app/main/default/objects/Application_form__c/validationRules/Birthday_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthday_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_birth__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_birth__c</errorDisplayField>
    <errorMessage>Birthday cannot be in future.</errorMessage>
</ValidationRule>