force-app/main/default/objects/Application_form__c/listViews/Accepted_Applications.listView-meta.xml
<ListView>
    <fullName>Accepted_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Membership__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Accepted Applications</label>
</ListView>