force-app/main/default/objects/Application_form__c/listViews/Applications_awaiting_Payment.listView-meta.xml
<ListView>
    <fullName>Applications_awaiting_Payment</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Membership__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Email__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Opened</value>
    </filters>
    <filters>
        <field>Membership__c</field>
        <operation>notEqual</operation>
        <value>Student Membership</value>
    </filters>
    <label>Applications awaiting payment</label>
</ListView>