force-app/main/default/objects/Application_form__c/listViews/Complete.listView-meta.xml
<ListView>
    <fullName>Complete</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Contact__c</columns>
    <columns>Form_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Membership__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Complete</label>
</ListView>