force-app/main/default/objects/Application_form__c/listViews/Documents_missing.listView-meta.xml
<ListView>
    <fullName>Documents_missing</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Membership__c</columns>
    <columns>Form_Status__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Further Information Required</value>
    </filters>
    <label>Documents missing</label>
</ListView>