force-app/main/default/objects/Application_form__c/listViews/Drafts.listView-meta.xml
<ListView>
    <fullName>Drafts</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Form_Status__c</columns>
    <columns>Membership__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Drafts</label>
</ListView>