force-app/main/default/objects/Application_form__c/listViews/My_Membership_Applications.listView-meta.xml
<ListView>
    <fullName>My_Membership_Applications</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Form_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Membership Applications</label>
</ListView>