force-app/main/default/objects/Application_form__c/listViews/My_Open_Membership_Applications.listView-meta.xml
<ListView>
    <fullName>My_Open_Membership_Applications</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Form_Status__c</columns>
    <columns>Sub_specialty__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Declined</value>
    </filters>
    <label>My Open Membership Applications</label>
</ListView>