force-app/main/default/objects/Application_form__c/listViews/New_Applications.listView-meta.xml
<ListView>
    <fullName>New_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Membership__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>New Applications</label>
</ListView>