force-app/main/default/objects/Application_form__c/listViews/Other_Place_of_Work_defined.listView-meta.xml
<ListView>
    <fullName>Other_Place_of_Work_defined</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Other_Place_of_Work__c</field>
        <operation>notContain</operation>
    </filters>
    <label>Other Place of Work defined</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>