force-app/main/default/objects/Application_form__c/listViews/RRFS_Review.listView-meta.xml
<ListView>
    <fullName>RRFS_Review</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Profession__c</columns>
    <columns>Membership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership__c</field>
        <operation>equals</operation>
        <value>Resident and Research Membership</value>
    </filters>
    <filters>
        <field>Membership__c</field>
        <operation>equals</operation>
        <value>Student Membership</value>
    </filters>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>RRFS Review</label>
</ListView>