force-app/main/default/objects/Application_form__c/listViews/Secretary_General_Queue_Application_form.listView-meta.xml
<ListView>
    <fullName>Secretary_General_Queue_Application_form</fullName>
    <filterScope>Queue</filterScope>
    <label>Secretary General Queue</label>
    <queue>Secretary_General_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>