force-app/main/default/objects/Application_form__c/listViews/With_SG_Comment.listView-meta.xml
<ListView>
    <fullName>With_SG_Comment</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Comments__c</columns>
    <columns>Form_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>With SG Comment</label>
</ListView>